--- a/HTML-task2/index.html
+++ b/HTML-task2/index.html
@@ -8,7 +8,7 @@
 <body>
     <header style="text-align: center;">
         <h1><span style="color:Green;">360 Digrii</span><span style="color: rgb(62, 159, 198);"> Basket</span></h1>
-        <p><a href="index.html"><img src="home.png" height="20px" width="20px"></a>  |
+        <p><a href="#"><img src="home.png" height="20px" width="20px"></a>  |
         <a href="fruits.html" ><img src="fruitslogo.jpg" height="25px" width="25px"></a>  |
         <a href="flowers.html" ><img src="flowerslogo.jpg" height="25px" width="25px"></a></p>
     </header>
