--- a/Task-4/form2.html
+++ b/Task-4/form2.html
@@ -62,8 +62,8 @@
                     <label for="gender">Gender</label>
                 </td>
                 <td colspan="3">
-                    <input type="radio" id="gender" name="gen">Male
-                    <input type="radio" id="gender" name="gen">Female
+                    <input type="radio" id="male" name="gender" value="Male">Male
+                    <input type="radio" id="female" name="gender" value="Female">Female
                 </td>
             </tr>
             <tr>
