--- a/Task-4/form4.html
+++ b/Task-4/form4.html
@@ -6,9 +6,10 @@
     <title>form4</title>
 </head>
 <body >
-    <h2 align="center">Registration form</h2>
+    
     <form action="server4" name="form4" method="post">
-        <table cellspacing="10px" cellpadding="2px" align="center">
+        <table bgcolor="eef1ff" border="0px" cellspacing="10px" cellpadding="2px" align="center">
+            <caption><h2>Registration form</h2></caption>
             <thead>
 
             </thead>
@@ -53,7 +54,7 @@
                 <tr>
                     <td colspan="2">
                     <label for="sub">Subject</label>
-                    <select name="sub" id="sub" >
+                    <select name="sub" id="sub" style="width: 100%;" >
                         <option >Select your option</option>
                         <option value="Maths">Maths</option>
                         <option value="Physics">Physics</option>
